Modified portfolio page

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     </header>
 
     <main>
+        <p><strong>Bianca Dominguez</strong></p>
         <section id="about">
             <h2>About Me</h2>
             <img src="niqabi.jpg" alt="Me">
@@ -34,21 +35,35 @@
          <section id="projects">
             <h2>Projects</h2>
             <article>
-                <h3>Project 1</h3>
                 <img src="terraform.png" alt="Terraform Project">
                 <p>Description:</p>
             </article>
             <article>
-                <h3>Project 2</h3>
                 <img src="cloudtopia.png" alt="Cloudtopia AWS/AI">
                 <p>Description:</p>
             </article>
+         </section>
+
+         <section id="contact">
+            <h2>Contact Me</h2><br>
+            <p>Drop me a quick message or reach me direct on the details below.</p>
+            <form action="#" >
+                <label for="name">Name:</label>
+                <input type="text" id="name" name="name">
+                <label for="email">Email:</label>
+                <input type="text" id="email" name="email">
+                <br>
+                <label for="message"
+            </form>
          </section>
 
 
 
 
     </main>
+    <footer>
+        <p>Copyright 2025 AWS Cloud Girl</p>
+    </footer>
     
 </body>
 </html>
