Modified portfolio page

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <!-- Navigation -->
         <nav>
             <ul>
-                <li><a href="#about me"><strong>About Me</strong></a></li>
+                <li><a href="#about"><strong>About Me</strong></a></li>
                 <li><a href="#projects"><strong>Projects</strong></a>
                 <li><a href="#contact"><strong>Contact</strong></a></li>
             </ul>
@@ -23,12 +23,12 @@
 
     <main>
         <p><strong>Bianca Dominguez</strong></p>
-        <section id="about">
+            <div id="about" >
             <h2>About Me</h2>
             <img src="niqabi.jpg" alt="Me">
             <p>I am a dedicated professional transitioning into the world of DevOps and DevSecOps, with a strong foundation in cloud computing and a passion for continuous learning. Currently, I am enrolled in a full-stack development bootcamp to deepen my understanding of software development, as I believe that mastering development principles is essential for excelling in DevOps. My goal is to bridge the gap between development and operations, enabling me to build more efficient, secure, and scalable systems. With hands-on experience in CI/CD pipelines, cloud platforms, and infrastructure as code, combined with my entrepreneurial background in managing complex projects, I am eager to bring a holistic approach to DevOps and DevSecOps roles.</p>
         </section>
-
+    </div>
         
 
          <!-- Projects Section -->
@@ -36,29 +36,26 @@
             <h2>Projects</h2>
             <article>
                 <img src="terraform.png" alt="Terraform Project">
-                <p>Description:</p>
+                <p>This project is an infrastructure-as-code (IaC) solution using Terraform to automate the provisioning, management, and deployment of cloud resources for a customizable content management system (CMS).</p>
             </article>
             <article>
                 <img src="cloudtopia.png" alt="Cloudtopia AWS/AI">
-                <p>Description:</p>
+                <p>Passport Photo Automation</p>
             </article>
          </section>
 
          <section id="contact">
-            <h2>Contact Me</h2><br>
+            <h2>Contact Me</h2>
             <p>Drop me a quick message or reach me direct on the details below.</p>
             <form action="#" >
                 <label for="name">Name:</label>
-                <input type="text" id="name" name="name">
+                <input type="text" id="name" name="name"><br>
                 <label for="email">Email:</label>
-                <input type="text" id="email" name="email">
-                <br>
-                <label for="message"
+                <input type="text" id="email" name="email"><br>
+                <label for="Message">Message:</label>
+                <input type="text" id="message" name="messagge"><br>
             </form>
          </section>
-
-
-
 
     </main>
     <footer>
