Modified portfolio page

--- a/index.html
+++ b/index.html
@@ -22,16 +22,19 @@
     </header>
 
     <main>
+        <div class="container">
         <p><strong>Bianca Dominguez</strong></p>
+        </div>
             <div id="about" >
             <h2>About Me</h2>
             <img src="niqabi.jpg" alt="Me">
             <p>I am a dedicated professional transitioning into the world of DevOps and DevSecOps, with a strong foundation in cloud computing and a passion for continuous learning. Currently, I am enrolled in a full-stack development bootcamp to deepen my understanding of software development, as I believe that mastering development principles is essential for excelling in DevOps. My goal is to bridge the gap between development and operations, enabling me to build more efficient, secure, and scalable systems. With hands-on experience in CI/CD pipelines, cloud platforms, and infrastructure as code, combined with my entrepreneurial background in managing complex projects, I am eager to bring a holistic approach to DevOps and DevSecOps roles.</p>
         </section>
-    </div>
+      </div>
         
 
          <!-- Projects Section -->
+        <div>
          <section id="projects">
             <h2>Projects</h2>
             <article>
@@ -45,6 +48,7 @@
                 <p>This project automates passport photo validation using AWS services like Rekognition for image analysis, S3 for storage, Lambda for processing, DynamoDB for results, and API Gateway for data retrieval, ensuring efficient, scalable, and reliable automation.</p>
             </article>
          </section>
+        </div>
 
          <section id="contact">
             <h2>Contact Me</h2>
@@ -75,7 +79,7 @@
 
     </main>
     <footer>
-        <p>Copyright 2025 AWS Cloud Girl</p>
+        <p>© Copyright 2025 AWS Cloud Girl</p>
     </footer>
     
 </body>
